virtual-services/client-vs.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: client-service
  namespace: garage-namespace
spec:
  hosts:
    - client-service
  http:
    - route:
        - destination:
            host: client-service
            subset: v1

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: client-service
  namespace: garage-namespace
spec:
  host: client-service
  subsets:
    - name: v1
      labels:
        version: v1

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: postgres-client
  namespace: garage-namespace
spec:
  hosts:
    - postgres-client-service
  http:
    - route:
        - destination:
            host: postgres-client-service
            subset: v1

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: postgres-client
  namespace: garage-namespace
spec:
  host: postgres-client-service
  subsets:
    - name: v1
      labels:
        version: v1
